# pyorbbecsdk

./: .gitignore  CMakeLists.txt  pyproject.toml  requirements.txt  setup.py
